@W-9472064 Fix UI gaps including text-align for visualPickerItem (#1778)

--- a/packages/@flow-builder/ui/src/builder_platform_interaction/visualPickerItem/visualPickerItem.css
+++ b/packages/@flow-builder/ui/src/builder_platform_interaction/visualPickerItem/visualPickerItem.css
@@ -18,7 +18,7 @@
     max-height: 3.6em;
     overflow: hidden;
     position: relative;
-    text-align: justify;
+    text-align: left;
     /* place for '...' */
     margin-right: 1em;
     padding-right: 1em;
